# autologin

./: .gitignore  AutoLogin.sln  CMakeLists.txt  CredentialProviderSamples.sln  README.md
SampleHardwareEventCredentialProvider/: SampleHardwareEventCredentialProvider.vcxproj.filters
etc/: Unregister.reg
helpers/: Dll.cpp  Dll.h  Helpers.vcxproj  Helpers.vcxproj.filters  RDPState.cpp  RDPState.h
samplehardwareeventcredentialprovider/: AutoLogin.vcxproj  CBaseCredential.cpp  CBaseCredential.h  CDefaultCredential.cpp  CDefaultCredential.h  CDefaultProvider.cpp  CDefaultProvider.h  CMessageCredential.h  CSampleCredential.cpp  CSampleCredential.h  CSampleProvider.cpp  CSampleProvider.h  CUnknown.h  CommandWindow.cpp  CommandWindow.h  Dll.cpp  MessageCredential.cpp  MessageCredential.h  RDPState.cpp  RDPState.h  Register.reg  SampleHardwareEventCredentialProvider.def  SampleHardwareEventCredentialProvider.vcxproj  SampleHardwareEventCredentialProvider.vcxproj.filters  common.h  fields.cpp  fields.h  helpers.cpp  resource.h  resources.rc
src/: AutoLogin.def  CBaseCredential.cpp  CBaseCredential.h  CDefaultCredential.h  CDefaultProvider.cpp  CMessageCredential.h  CUnknown.h  Dll.cpp  RDPState.cpp  helpers.cpp  helpers.h
